abhishek-k8s/sin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sudhamsh-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sudhamsh-dep
  template:
    metadata:
      labels:
        app: sudhamsh-dep
    spec:
      containers:
      - name: python-app
        image: sudhamshapp/reagapp:latest
        ports:
        - containerPort: 8080
